--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,16 @@
 {
   "env": {
-    "browser": false,
-    "es2021": true,
     "node": true,
-    "jest": true
+    "jest": true,
+    "es2021": true
   },
-  "extends": "eslint:recommended",
+  "extends": ["eslint:recommended"],
   "parserOptions": {
-    "ecmaVersion": "latest"
+    "ecmaVersion": 12,
+    "sourceType": "module"
   },
   "rules": {
-    "semi": ["error", "always"],
-    "quotes": ["error", "double"]
+    "no-unused-vars": "warn",
+    "semi": ["error", "always"]
   }
 }
