--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
-  "name": "exam3u",
+  "name": "notas-estadistica-lab",
   "version": "1.0.0",
-  "description": "",
+  "description": "Práctica CI para funciones calcWeightedGrade y percentile",
   "main": "index.js",
-  "directories": {
-    "test": "tests"
-  },
   "scripts": {
+    "lint": "eslint .",
     "test": "jest --coverage",
-    "lint": "eslint src/**/*.js"
+    "check-coverage": "node scripts/checkCoverage.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
+  "author": "Tu Nombre",
+  "license": "MIT",
   "devDependencies": {
-    "eslint": "^9.33.0",
-    "jest": "^30.0.5"
+    "eslint": "^8.0.0",
+    "jest": "^29.0.0"
   }
 }
+
