--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
-{
-  "name": "notas-estadistica-lab",
-  "version": "1.0.0",
-  "description": "Práctica CI para funciones calcWeightedGrade y percentile",
-  "main": "index.js",
-  "scripts": {
-    "lint": "eslint .",
+ {
+   "name": "notas-estadistica-lab",
+   "version": "1.0.0",
+   "description": "Práctica CI para funciones calcWeightedGrade y percentile",
+   "main": "index.js",
+   "scripts": {
+     "lint": "eslint .",
     "test": "jest --coverage",
-    "check-coverage": "node scripts/checkCoverage.js"
+     "check-coverage": "node scripts/checkCoverage.js"
+   },
+  "jest": {
+    "coverageReporters": [
+      "json-summary",
+      "text",
+      "lcov"
+    ]
   },
-  "author": "Tu Nombre",
-  "license": "MIT",
-  "devDependencies": {
-    "eslint": "^8.0.0",
-    "jest": "^29.0.0"
-  }
-}
-
+   "author": "Tu Nombre",
+   "license": "MIT",
+   "devDependencies": {
+     "eslint": "^8.0.0",
+     "jest": "^29.0.0"
+   }
+ }
