--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,4 +28,30 @@ jobs:
       run: |
         npm run test
         npm run check-coverage
+  
+  preview:
+    needs: build-and-test
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - run: npm ci
+      - run: npm install -g firebase-tools
+      - run: |
+          firebase hosting:channel:deploy pr-${{ github.event.number }} \
+            --project notas-estadistica-lab
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
 
+  deploy:
+    needs: build-and-test
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - run: npm ci
+      - run: npm install -g firebase-tools
+      - run: |
+          firebase deploy --only hosting --project notas-estadistica-lab
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
